k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: imalka13/dockerized-full-stack-app-frontend:latest
          ports:
            - containerPort: 80
image: imalka13/dockerized-full-stack-app-frontend:latest
imagePullPolicy: Always
